# funsecret

./: .gitignore  README.md  pyproject.toml  setup.py
example/: read.py
extbuild/funsecret-snapshot/: pyproject.toml
src/funsecret/secret/: cache_secret.py  secret.py
