[project]
name = "funsecret"
version = "1.4.64"
description = "funsecret"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "cryptography>=43.0.3", "funcache-tau>=1.0.4", "funlog-tau>=1.0.1", "orjson>=3.10.10", "sqlalchemy>=2.0.35", "tqdm>=4.67.0",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funsecret"
Releases = "https://github.com/farfarfun/funsecret/releases"

[project.optional-dependencies]
mysql = [ "pymysql>=1.1.1", "mysqlclient>=2.2.7",]

[tool.setuptools]
license-files = []

[tool.uv.workspace]
members = [ "extbuild/funsecret-snapshot",]
